kubernetes/mongo-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: wanderlust
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
