kubernetes/ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-ingress-argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: external-nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: '10.0.0.0/16'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'false'
spec:
  tls:
    - hosts:
        - argocd.prajwalkumar.co.in
      secretName: argocd-tls
  ingressClassName: external-nginx
  rules:
    - host: argocd.prajwalkumar.co.in
      http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: Prefix
            backend:
              service:
                name: cm-acme-http-solver-cxdrg # This gets created by cert-manager
                port:
                  number: 8089
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
