kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wanderlust-ingress
  namespace: wanderlust
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/ingress.class: external-nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - wanderlust.prajwalkumar.co.in
      secretName: wanderlust-frontend-tls
    - hosts:
        - wanderlust-api.prajwalkumar.co.in
      secretName: wanderlust-api-tls
  ingressClassName: external-nginx
  rules:
    - host: wanderlust.prajwalkumar.co.in
      http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: Prefix
            backend:
              service:
                name: cm-acme-http-solver-bf6xc #This gets created by cert-manager
                port:
                  number: 8089
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: wanderlust-api.prajwalkumar.co.in
      http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: Prefix
            backend:
              service:
                name: cm-acme-http-solver-lbxmz #This gets created by cert-manager
                port:
                  number: 8089
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
